# project_NVSIA

./: .gitignore  LLMtoDatabase.py  README.md  Untitled.ipynb  cache_file_save.ipynb  dashboard.py  df_file_save.ipynb  llm_summarizer.ipynb  llm_to_db.ipynb  pyproject.toml  rec.ipynb  rec_test.ipynb  recommender.py  requirements.txt  s_geocoding.ipynb  s_knowledge_graph.ipynb  s_news_categorizer.ipynb  s_news_categorizer_load_test.ipynb  spn_rec.ipynb  test.ipynb  test.py
data/: knowledge_test.json  price_notna_summary.xlsx  test_dataset.csv  test_dataset.tsv  test_dataset_llm.tsv  test_dataset_llm.xlsx  test_dataset_llm_1차 검수 추가.xlsx  test_llm_summary_1119.xlsx  test_region_parsing_result.tsv
test_notebook_files/: data_processing_4.ipynb  df_file_save.ipynb  llm_summarizer_async.ipynb  llm_to_db.ipynb  location_prep.ipynb  rec.ipynb  rec_test.ipynb  s_news_categorizer.ipynb  s_news_categorizer_load_test.ipynb  s_news_categorizer_load_test2.ipynb  spn_crawler.ipynb
test_python_files/: LLMtoDatabase.py  dashboard_postgres.py  dashboard_postgres_ver10.py  dashboard_postgres_ver11.py  dashboard_postgres_ver12.py  dashboard_postgres_ver13.py  dashboard_postgres_ver14.py  dashboard_postgres_ver15.1.py  dashboard_postgres_ver15.2.py  dashboard_postgres_ver15.3.py  dashboard_postgres_ver15.py  dashboard_postgres_ver2.py  dashboard_postgres_ver3.py  dashboard_postgres_ver4.py  dashboard_postgres_ver5.py  dashboard_postgres_ver6.py  dashboard_postgres_ver7.py  dashboard_postgres_ver8.py  dashboard_postgres_ver9.py  geocoder.py  knowledge.py  knowledge_ver2.py  maptest.py  (+5 more)
