[project]
name = "project-nvsia"
version = "0.1.0"
description = ""
authors = [
    {name = "snhzyn",email = "sonhojin1202@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [

    "openai",
    "psycopg2",
    "ipykernel (>=7.1.0,<8.0.0)",
    "requests (>=2.32.5,<3.0.0)",
    "bs4 (>=0.0.2,<0.0.3)",
    "pandas (>=2.3.3,<3.0.0)",
    "dotenv (>=0.9.9,<0.10.0)",
    "scikit-learn (>=1.7.2,<2.0.0)",
    "streamlit",
    "pyvis",
    "networkx",


]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
